# tflogger-bazel

./: BUILD  WORKSPACE  deps.bzl  go.mod  go.sum
go/tflogger/: BUILD.bazel  main.go
protobuf/googleapis/google/rpc/: BUILD.bazel  code.proto  error_details.proto  status.proto
protobuf/seldon/: BUILD.bazel  prediction.proto
protobuf/tensorflow/core/example/: BUILD.bazel  example.proto  example_parser_configuration.proto  feature.proto
protobuf/tensorflow/core/framework/: BUILD.bazel  api_def.proto  attr_value.proto  full_type.proto  function.proto  graph.proto  node_def.proto  op_def.proto  resource_handle.proto  summary.proto  tensor.proto  tensor_shape.proto  tensor_slice.proto  types.proto  variable.proto  versions.proto
protobuf/tensorflow/core/protobuf/: BUILD.bazel  error_codes.proto  meta_graph.proto  saved_model.proto  saved_object_graph.proto  saver.proto  struct.proto  tensor_bundle.proto  trackable_object_graph.proto
protobuf/tensorflow_serving/: README.md
protobuf/tensorflow_serving/apis/: BUILD.bazel  classification.proto  get_model_metadata.proto  get_model_status.proto  inference.proto  input.proto  model_management.proto  model_service.proto  predict.proto  prediction_service.proto  regression.proto  status.proto
protobuf/tensorflow_serving/config/: BUILD.bazel  logging_config.proto  model_server_config.proto
