load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "core_proto",
    srcs = ["prediction.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//protobuf/tensorflow/core/framework:framework_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

go_proto_library(
    name = "core_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "carousel/seldonio/protobuf/seldon-core",
    proto = ":core_proto",
    visibility = ["//visibility:public"],
    deps = ["//protobuf/tensorflow/core/framework"],
)

go_library(
    name = "seldon-core",
    embed = [":core_go_proto"],
    importpath = "carousel/seldonio/protobuf/seldon-core",
    visibility = ["//visibility:public"],
)
