load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "example_proto",
    srcs = [
        "example.proto",
        "example_parser_configuration.proto",
        "feature.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//protobuf/tensorflow/core/framework:framework_proto"],
)

go_proto_library(
    name = "example_go_proto",
    importpath = "carousel/tensorflow/core/example",
    proto = ":example_proto",
    visibility = ["//visibility:public"],
    deps = ["//protobuf/tensorflow/core/framework"],
)

go_library(
    name = "example",
    embed = [":example_go_proto"],
    importpath = "carousel/tensorflow/core/example",
    visibility = ["//visibility:public"],
)
